objects/objectsharesetting__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>institute__c</fullName>
        <label>institute</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rollno__c</fullName>
        <label>rollno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>objectsharesetting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>objectsharesetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>objectsharesettings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>